# mpc

./: .gitignore  README.md  claude_desktop_config.json  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
agent/: mcp_servers.json  pyproject.toml
ai_platform/: .env.example  Makefile  README.md  pyproject.toml
ai_platform/api/: __init__.py  llm_providers.py  main.py
ai_platform/api/agents/: __init__.py  base_agent.py
ai_platform/api/mcp_adapter/: __init__.py  mcp_to_langchain.py
ai_platform/api/prompts/: __init__.py  template_manager.py
ai_platform/config/: mcp_servers.json
calc/: pyproject.toml
client/: mcp_llm_client.py  mcp_servers.json  pyproject.toml
db_server/: Makefile  README.md  intelligent_shop.db  pyproject.toml  recommend_server.py
db_server/chroma_data/: chroma.sqlite3
design_system/: Makefile  README.md  pyproject.toml  server.py
design_system/components/: components.json
design_system/icons/: icons.json
design_system/tokens/: design-tokens.json  style-types.json
external_api/: .env.example  Makefile  external_api_server.py  pyproject.toml
fastmcp/: Makefile  calculator_server.py
image_classifier/: README.md
image_classifier/notebooks/: 01_cnn_basics.ipynb  02_convolution.ipynb  03_weights_and_learning.ipynb  04_multi_channel_conv.ipynb  05_softmax_fc.ipynb  06_digit8_visualization.ipynb  07_convolution_step_by_step.ipynb
openapi/: .env.example  Makefile  README.md  openapi_server.py  pyproject.toml
recommend_server/notebook/: recommendation_ai_math.ipynb
universal_tools/: Makefile  pyproject.toml
