[project]
name = "ai-platform"
version = "0.1.0"
description = "社内AI基盤 - MCPツールとLLMを統合したAIエージェントプラットフォーム"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # LLM
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-vertexai>=2.0.0",
    "langgraph>=0.2.0",
    # MCP
    "mcp>=1.0.0",
    # Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
